Switch back to simpler issuer
Issuer handles a single namespace.
Must simpler.
The web makes requests correctly.
Just needs to save and display now.
